# permid64

./: .gitignore  CHANGELOG.md  MULTI_PROCESS.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
.hypothesis/constants/: 15d3e0efeff9814a  1ff221e350df5b45  24d86928d6f1664e  deefe6ac5777deb9  e61e036b9834953d  e77d7723c73e3642
benchmarks/: bench_id64.py
id64/: __init__.py  generator.py  types.py
permid64/: __init__.py  _constants.py  codec.py  config.py  exceptions.py  generator.py  layout.py  permutation.py  source.py
tests/: test_codec.py  test_config.py  test_counter.py  test_id64_e2e.py  test_layout.py  test_permutation.py  test_process_safe_counter.py  test_properties.py
