[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "permid64"
version = "0.3.0"
description = "Clock-free, persistent, reversible-permutation 64-bit ID generation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["id", "uuid", "unique-id", "feistel", "permutation", "counter", "clock-free"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []  # zero runtime dependencies

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist",   # parallel test execution
    "hypothesis",     # property-based testing
    "ruff",           # linter + formatter
    "mypy",           # static type checker
]

[project.urls]
Repository = "https://github.com/erickh826/permid64"
Issues = "https://github.com/erickh826/permid64/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["permid64*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
